syntax = "proto3";
package m2.character.v1;

import "google/protobuf/empty.proto";
import "Common/Enums.proto";
import "Common/Models.proto";

option csharp_namespace = "Metin2Server.Shared.DbContracts";

service CharacterService {
  rpc TryBeginCharacterCreation (TryBeginCharacterCreationGrpcRequest) returns (TryBeginCharacterCreationGrpcResponse);
  rpc ExistsByIndexAndAccountId (ExistsByIndexAndAccountIdGrpcRequest) returns (ExistsByIndexAndAccountIdGrpcResponse);
  rpc ExistsByName (ExistsByNameGrpcRequest) returns (ExistsByNameGrpcResponse);
  rpc CreateCharacter (CreateCharacterGrpcRequest) returns (CreateCharacterGrpcResponse);
  rpc GetCharactersByAccountId (GetCharactersByAccountIdGrpcRequest) returns (GetCharactersByAccountIdGrpcResponse);
  rpc GetCharacterLevelByAccountIdAndIndex (GetCharacterLevelByAccountIdAndIndexGrpcRequest) returns (GetCharacterLevelByAccountIdAndIndexGrpcResponse);
  rpc DeleteCharacterByAccountIdAndIndex (DeleteCharacterByAccountIdAndIndexGrpcRequest) returns (DeleteCharacterByAccountIdAndIndexGrpcResponse);
  rpc GetCharacterByAccountIdAndIndex (GetCharacterByAccountIdAndIndexGrpcRequest) returns (GetCharacterByAccountIdAndIndexGrpcResponse);
}

message TryBeginCharacterCreationGrpcRequest {
  int64 account_id = 1;
}

message TryBeginCharacterCreationGrpcResponse {
  bool allowed = 1;
}

message ExistsByIndexAndAccountIdGrpcRequest {
  int64 account_id = 1;
  int32 index = 2;
}

message ExistsByIndexAndAccountIdGrpcResponse {
  bool exists = 1;
}

message ExistsByNameGrpcRequest {
  string name = 1;
}

message ExistsByNameGrpcResponse {
  bool exists = 1;
}

message CreateCharacterGrpcRequest{
  int64 account_id = 1;
  string name = 2;
  m2.common.v1.RaceGrpc race = 3;
  int32 shape = 4;
  uint32 index = 5;
}

message CreateCharacterGrpcResponse {
  oneof result {
    m2.common.v1.CharacterGrpc character = 1;
    google.protobuf.Empty not_found = 2;
  }
}

message GetCharactersByAccountIdGrpcRequest {
  int64 account_id = 1;
}

message GetCharactersByAccountIdGrpcResponse {
  repeated m2.common.v1.CharacterGrpc characters = 1;
}

message GetCharacterLevelByAccountIdAndIndexGrpcRequest {
  int64 account_id = 1;
  uint32 index = 2;
}

message GetCharacterLevelByAccountIdAndIndexGrpcResponse {
  oneof result {
    uint32 level = 1;
    google.protobuf.Empty not_found = 2;
  }
}

message DeleteCharacterByAccountIdAndIndexGrpcRequest {
  int64 account_id = 1;
  uint32 index = 2;
}

message DeleteCharacterByAccountIdAndIndexGrpcResponse {
  bool success = 1;
}

message GetCharacterByAccountIdAndIndexGrpcRequest {
  int64 account_id = 1;
  uint32 index = 2;
}

message GetCharacterByAccountIdAndIndexGrpcResponse {
  oneof result {
    m2.common.v1.CharacterGrpc character = 1;
    google.protobuf.Empty not_found = 2;
  }
}

