syntax = "proto3";
package m2.common.v1;

import "google/protobuf/wrappers.proto";
import "Common/Enums.proto";

option csharp_namespace = "Metin2Server.Shared.DbContracts.Common";

message Character {
  int64 id = 1;
  string name = 2;
  Race race = 3;
  uint32 index = 4;
  uint32 part_base = 5;
  uint32 part_main = 6;
  uint32 part_hair = 7;
  uint32 skill_group = 8;
  CoordinatesInfo coordinates = 9;
  StatisticsInfo statistics = 10;
  HorseStatisticsInfo horse_statistics = 11;
}

message CoordinatesInfo {
  uint32 dir = 1;
  int32 x = 2;
  int32 y = 3;
  int32 z = 4;
  google.protobuf.UInt32Value map_index = 5;
  google.protobuf.Int32Value exit_x = 6;
  google.protobuf.Int32Value exit_y = 7;
  google.protobuf.UInt32Value exit_map_index = 8;
}

message StatisticsInfo {
  int32 hp = 1;
  int32 sp = 2;
  int32 stamina = 3;
  int32 random_hp = 4;
  int32 random_sp = 5;
  uint32 play_time = 6;
  uint32 level = 7;
  uint32 level_step = 8;
  uint32 st = 9;
  uint32 ht = 10;
  uint32 dx = 11;
  uint32 iq = 12;
  uint32 exp = 13;
  uint32 gold = 14;
  uint32 stat_point = 15;
  uint32 skill_point = 16;
  uint32 sub_skill_point = 17;
  uint32 horse_skill_point = 18;
  int32 alignment = 19;
  uint32 stat_reset_count = 20;
}

message HorseStatisticsInfo {
  uint32 level = 1;
  bool riding = 2;
  int32 stamina = 3;
  int32 health = 4;
  int32 health_drop_time = 5;
}
